# esp32-jerryscript

components/car/: CMakeLists.txt
components/car/include/: car.h
components/engine/: CMakeLists.txt  engine.c
components/engine/include/: engine.h
components/jerry/: CMakeLists.txt
components/spark_plug/: CMakeLists.txt  plug.c
components/spark_plug/include/: plug.h
main/: CMakeLists.txt  blink.c  main.c
